# lerobot

./: .gitignore  2026-06-21-110207-this-session-is-being-continued-from-a-previous-c.txt  AGGREGATE_DATASET.md  COMPARAISON_VJEPA_AC.md  RAPPORT_IMPLEMENTATION.md  envhub_random_action.py  inference.sh  push.py  test_async_pipeline.py
lerobot_policy_lewm/: README.md  STATUS.md  TECHNICAL_REPORT.md  pyproject.toml
lerobot_policy_lewm/scripts/: eval_pusht.py  smoke_test.py  train_smoke_test.py
lerobot_policy_lewm/src/lerobot_policy_lewm/: __init__.py  configuration_lewm.py  jepa.py  modeling_lewm.py  modules.py  processor_lewm.py  solver.py
lerobot_policy_lewm/tests/: test_jepa.py  test_modules.py  test_policy.py  test_solver.py
lerobot_policy_vjepa_ac/: AUDIT_REPORT.md  CONFORMITY_REPORT.md  README.md  README_IMPLEMENTATION.md  ROADMAP.md  TECHNICAL_REPORT_frames_timestamps.md  architecture.md  audit_report_feedback_opencode.md  decisions.md  first_training_log.txt  inference.sh  pyproject.toml  rapport_integration_lerobot.md  train.sh
lerobot_policy_vjepa_ac/configs/policy/: vjepa_ac_community.yaml
lerobot_policy_vjepa_ac/scripts/: MULTI_DATASET_README.md  create_aggregated_dataset.py  filter_long_episodes.py  final_validation.py  list_subdatasets.py  parity_test.py  parity_test_droid.py  smoke_test.py  smoke_test_checkpoint.py  test_imagenet_normalization.py  test_policy_imagenet_fix.py  train_multi_dataset.sh
lerobot_policy_vjepa_ac/src/lerobot_policy_vjepa_ac/: __init__.py  ac_predictor_utils.py  (+4 more)
lerobot_policy_vjepa_ac/tests/: test_vjepa_ac.py
(+43 files in other folders)
