[project]
name = "lerobot_policy_lewm"
version = "0.1.0"
description = "LeWM JEPA world model policy plugin for LeRobot"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "timm>=1.0.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[tool.lerobot]
policy_type = "lewm"
