[project]
name = "lerobot_policy_vjepa_ac"
version = "0.1.0"
description = "V-JEPA policy plugin for LeRobot"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "timm",
    "einops",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lerobot_policy_vjepa_ac"]

[tool.lerobot]
policy_type = "vjepa_ac"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]